# seiswg

./: .gitignore  Cargo.toml  README.md  build.bash  example_adjoint.py  example_forward.py  pyproject.toml  run_example.bash  run_example.sh
.github/workflows/: pages.yml
examples/adjoint/: config.ini  config_true.ini  generate_model.py
examples/adjoint/obs_traces/: uy_000000.npy  uy_000001.npy  uy_000002.npy  uy_000003.npy  uy_000004.npy  uy_000005.npy  uy_000006.npy  uy_000007.npy  uy_000008.npy  uy_000009.npy  uy_000010.npy  uy_000011.npy  vy_000000.npy  vy_000001.npy  vy_000002.npy  vy_000003.npy  vy_000004.npy  vy_000005.npy  vy_000006.npy  vy_000007.npy  vy_000008.npy  vy_000009.npy  vy_000010.npy  vy_000011.npy
examples/forward/: config.ini  generate_model.py
examples/spin/: config.ini  generate_model.py
examples/spin/output_ref/: vx_000000.npy  vz_000000.npy
examples/spin2/: generate_model.py
examples/spin3/: generate_model.py
fd2d/: __init__.py  fd2d.py  misfit.py  ricker.py  solver.py
scripts/: plot_results.py
shaders/: fd2d.wgsl
src/: config.rs  lib.rs  main.rs  solver.rs
tests/: integration.rs
tests/fixtures/forward/: uy_000000.npy
tests/fixtures/spin/: ry_000000.npy
web/: index.html
