[project]
name = "seiswg"
version = "0.0.2"
description = "2D finite difference solver"
readme = "README.md"
authors = [
  { name = "Congyue Cui", email = "ccui@princeton.edu" }
]
requires-python = ">=3.12"

dependencies = [
  "numba-cuda[cu12]",
  "matplotlib",
  "scipy",
  "numpy",
  "obspy"
]

[tool.uv]
package = false
